# DoubaoAudioToText

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  USAGE.md  build.rs  clr  新的API的baseURL.txt  火山对象存储TOS.txt
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: audio.rs  backend.rs  input.rs  lib.rs  output.rs  pipeline.rs  progress.rs  tos_upload.rs  types.rs  volcengine.rs
docs/: API-Ark.txt  API-LAS.txt  API-bigmodel.txt
frontend/: app.js  index.html  style.css
result/results/resp_02178119148302710447dde57dfd944c0e0a8e8d78d061e5b502a/: result.srt  result_formatted.md
result/results/resp_02178119168824710447dde57dfd944c0e0a8e8d78d061e75f1ba/: result.srt  result_formatted.md
result/results/resp_02178119169812410447dde57dfd944c0e0a8e8d78d061e5e2cf4/: result.srt  result_formatted.md
src/: ark.rs  audio.rs  azure.rs  input.rs  las.rs  main.rs  tos.rs  types.rs  volcengine.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
test_audio/: manifest.json  result_merged.txt
test_audio/results/resp_021781107983536e04d0ce0cb7c9c575f1fe60733b212fdb717a5/: response.json  result.srt  result.txt  result_formatted.md
test_audio/results/resp_021781108002371e04d0ce0cb7c9c575f1fe60733b212fd7fdbd6/: response.json  result.srt  result.txt  result_formatted.md
