[package]
name = "volc_auc_batch_client"
version = "0.2.1"
edition = "2021"
description = "多提供商语音转文本批量客户端 —— 音频检查/转换/切分 + 批量提交与结果轮询。支持火山引擎（豆包）和 Azure Speech-to-Text。"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
ve-tos-rust-sdk = { version = "2.9.2", features = ["tokio-runtime"] }
futures-core = "0.3"
